--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@ I am currently a 2nd year undergraduate student at the University of California 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
 I enjoy applying <strong>modeling</strong> techniques on unstructured data to solve novel problems. My areas of interest include <strong>Deep Learning</strong>, Natural Lanugage Processing,
-and Computer Vision. Check out how I explore these areas with <a href="/projects">my projects</a> and <a href="https://github.com/tanveermittal" target="_blank">my Github</a>.
+and Computer Vision. Check out how I explore these areas with <a href="/projects">my projects</a> and <a href="https://github.com/TanveerMittal" target="_blank">my Github</a>.
 </p>
 
 <p class="about-text">
@@ -32,7 +32,7 @@ In my spare time, when I'm not programming, I love to <strong>rock climb</strong
 
 <p class="about-text">
 <span class="fa fa-file-text-o about-icon"></span>
-My most recent <strong><a href="https://github.com/tanveermittal" target="_blank">Resume</a></strong>.
+My most recent <strong><a href="https://github.com/TanveerMittal/Resume/blob/master/Tanveer_Mittal_Resume.pdf" target="_blank">Resume</a></strong>.
 </p>
 
 <!--
