Updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,13 +10,13 @@ css: "/css/aboutme.css"
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
 I am currently a part-time <strong>software engineer</strong> at the <a href="https://cmrg.ucsd.edu/" target="_blank">UCSD Cardiac Mechanics Research Group</a> where I am working on the
-<a href="http://www.cardiacatlas.org/" target="_blank">Cardiac Atlas Project</a>. This summer I will also be a software engineering intern working on machine learning at
-American Express in Phoenix, Arizona. After school, I am hoping to work as a machine learning engineer.
+<a href="https://www.cardiacatlas.org/studies/chd-atlas/" target="_blank">Congenital Heart Disease Atlas</a> as a part of the <a href="http://www.cardiacatlas.org/" target="_blank">Cardiac Atlas Project</a>.
+This summer I will also be a software engineering intern working on machine learning an American Express in Phoenix, Arizona. After school, I am hoping to work as a machine learning engineer.
 </p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-I am currently a 2nd year undergraduate student at the University of California San Diego where I am majoring in <strong>Data Science</strong>.
+I am currently a 2nd year undergraduate student at the <strong>University of California San Diego</strong> where I am majoring in <strong>Data Science</strong>.
 </p>
 
 <p class="about-text">
