Added datahacks post

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,8 @@ css: "/css/aboutme.css"
 <span class="fa fa-briefcase about-icon"></span>
 I am currently a part-time <strong>software engineer</strong> at the <a href="https://cmrg.ucsd.edu/" target="_blank">UCSD Cardiac Mechanics Research Group</a> where I am working on the
 <a href="https://www.cardiacatlas.org/studies/chd-atlas/" target="_blank">Congenital Heart Disease Atlas</a> as a part of the <a href="http://www.cardiacatlas.org/" target="_blank">Cardiac Atlas Project</a>.
-This summer I will also be a software engineering intern working on machine learning an American Express in Phoenix, Arizona. After school, I am hoping to work as a machine learning engineer.
+I am also working as a part-time <strong>machine learning engineer</strong> at <a href="https://theinfopost.com/" target="_blank">the InfoPost</a> where I am working on implementing NLP techniques to detect fake news.
+This summer I will be a software engineering intern working on machine learning an American Express in Phoenix, Arizona. After school, I am hoping to work as a machine learning engineer and/or data scientist.
 </p>
 
 <p class="about-text">
@@ -21,7 +22,7 @@ I am currently a 2nd year undergraduate student at the <strong>University of Cal
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I enjoy applying <strong>modeling</strong> techniques on unstructured data to solve novel problems. My areas of interest include <strong>Deep Learning</strong>, Natural Lanugage Processing,
+I enjoy applying <strong>modeling</strong> techniques on unstructured data to solve novel problems and gain new insights. My areas of interest include <strong>Deep Learning</strong>, Natural Lanugage Processing,
 and Computer Vision. Check out how I explore these areas with <a href="/projects">my projects</a> and <a href="https://github.com/TanveerMittal" target="_blank">my Github</a>.
 </p>
 
