--- a/aboutme.html
+++ b/aboutme.html
@@ -11,8 +11,7 @@ css: "/css/aboutme.css"
 <span class="fa fa-briefcase about-icon"></span>
 I am currently a part-time <strong>software engineer</strong> at the <a href="https://cmrg.ucsd.edu/" target="_blank">UCSD Cardiac Mechanics Research Group</a> where I am working on the
 <a href="https://www.cardiacatlas.org/studies/chd-atlas/" target="_blank">Congenital Heart Disease Atlas</a> as a part of the <a href="http://www.cardiacatlas.org/" target="_blank">Cardiac Atlas Project</a>.
-I am also working as a part-time <strong>machine learning engineer</strong> at <a href="https://theinfopost.com/" target="_blank">the InfoPost</a> where I am working on implementing NLP techniques to detect fake news.
-This summer I will be a software engineering intern working on machine learning an American Express in Phoenix, Arizona. After school, I am hoping to work as a machine learning engineer and/or data scientist.
+This summer I am working as a software engineering intern in the database engineering team at American Express. After school, I am hoping to work as a machine learning engineer and/or data scientist.
 </p>
 
 <p class="about-text">
