Updated aboutme and centered text

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@ css: "/css/aboutme.css"
 <span class="fa fa-briefcase about-icon"></span>
 I am currently a part-time <strong>software engineer</strong> at the <a href="https://cmrg.ucsd.edu/" target="_blank">UCSD Cardiac Mechanics Research Group</a> where I am working on the
 <a href="https://www.cardiacatlas.org/studies/chd-atlas/" target="_blank">Congenital Heart Disease Atlas</a> as a part of the <a href="http://www.cardiacatlas.org/" target="_blank">Cardiac Atlas Project</a>.
-This summer I am working as a software engineering intern in the database engineering team at American Express. After school, I am hoping to work as a machine learning engineer and/or data scientist.
+This last summer I worked as a software engineering intern in the database engineering team at American Express. After school, I am hoping to work as a machine learning engineer and/or data scientist.
 </p>
 
 <p class="about-text">
