--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@ and Computer Vision. Check out how I explore these areas with <a href="/projects
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-In my spare time, when I'm not programming, I love to <strong>rock climb</strong>, run, and go on hikes in new places.
+In my spare time, when I'm not programming, I love to <strong>rock climb</strong>, drink lots of coffee, and go hiking.
 </p>
 
 <p class="about-text">
